; ModuleID = '/home/carl/AnghaBench/git/extr_commit-graph.c_get_commit_graph_filename.c'
source_filename = "/home/carl/AnghaBench/git/extr_commit-graph.c_get_commit_graph_filename.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [21 x i8] c"%s/info/commit-graph\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @get_commit_graph_filename(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = call i8* @xstrfmt(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i8* %5)
  store i8* %6, i8** %3, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = call i64 @strlen(i8* %7)
  %9 = add nsw i64 %8, 1
  %10 = call i8* @xmalloc(i64 %9)
  store i8* %10, i8** %4, align 8
  %11 = load i8*, i8** %4, align 8
  %12 = load i8*, i8** %3, align 8
  %13 = call i32 @normalize_path_copy(i8* %11, i8* %12)
  %14 = load i8*, i8** %3, align 8
  %15 = call i32 @free(i8* %14)
  %16 = load i8*, i8** %4, align 8
  ret i8* %16
}

declare dso_local i8* @xstrfmt(i8*, i8*) #1

declare dso_local i8* @xmalloc(i64) #1

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32 @normalize_path_copy(i8*, i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
